[package]
name = "mini-proxy-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio-util = "0.7.11"
futures-util = "0.3.30"
path-clean = "1.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fastrand = "2.1.0"
